--- a/desenapp.html
+++ b/desenapp.html
@@ -30,19 +30,27 @@
     <section id="section2">
 
         <h2>• Desenvolvedor de Aplicativos para Smartphone</h2>
-A popularização dos smartphones, redes sociais e outros dispositivos móveis e inteligentes aumenta
+<p>A popularização dos smartphones, redes sociais e outros dispositivos móveis e inteligentes aumenta
 ainda mais a necessidade por pessoas com os conhecimentos e experiência adequados para a área.
 Como tal especialista, é necessário que você domine as ferramentas, estruturas e linguagens de
 programação para as plataformas móveis mais usadas, bem como tenha conhecimentos sobre
-desenvolvimento Web.
-Você poderá trabalhar em vários setores de produção de software, estúdios de desenvolvimento de
-videogames e empresas de publicidade, marketing e comunicação. A profissão costuma exigir
-
+    desenvolvimento Web.</p><br>
+<p>Você poderá trabalhar em vários setores de produção de software, estúdios de desenvolvimento de
+    videogames e empresas de publicidade, marketing e comunicação. A profissão costuma exigir
 graduação em ciência da computação ou outra área relacionada, mas já há alguns cursos voltados
-especificamente para desenvolvimento móvel.
-Salário base médio: R$ 6.499,00 por mês.<br>
+especificamente para desenvolvimento móvel.</p><br>
+        <p>Salário base médio: R$ 6.499,00 por mês.</p><br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
 
-         <img src="blob2">
+         <img class="desenvolventoa" src="blob2">
     </section>
 </div>
 <footer id="rodape">
