--- a/desenso.html
+++ b/desenso.html
@@ -30,16 +30,25 @@
     <section id="section2">
 
         <h2>• Desenvolvedor de Software</h2>
-É um campo muito amplo que oferece inúmeras oportunidades para quem tem capacitação em
+<p>É um campo muito amplo que oferece inúmeras oportunidades para quem tem capacitação em
 programação, ciência ou engenharia da computação e engenharia de software. Você pode trabalhar em
-segmentos como a área comercial, médica, militar, industrial, farmacêutica, científica, entre outros.
-As habilidades mais requisitadas pela profissão são conhecimentos sobre linguagens de programação e
+    segmentos como a área comercial, médica, militar, industrial, farmacêutica, científica, entre outros.</p><br>
+<p>As habilidades mais requisitadas pela profissão são conhecimentos sobre linguagens de programação e
 noções de arquitetura e engenharia de software, capacidade de solucionar problemas, raciocínio lógico
-e uma mentalidade orientada para resultados.
-A mediana salarial de Desenvolvedor de Software junior é de R$5.067,50, e para profissionais seniores,
-a mediana salarial é de R$12.069,00.<br>
+    e uma mentalidade orientada para resultados.</p><br>
+<p>A mediana salarial de Desenvolvedor de Software junior é de R$5.067,50, e para profissionais seniores,
+    a mediana salarial é de R$12.069,00.</p><br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
 
-         <img src="blob">
+         <img class="desenvolvimentos" src="blob">
     </section>
 </div>
 
