--- a/index.html
+++ b/index.html
@@ -31,25 +31,49 @@
     <section id="section2">
 
         <h2>• Desenvolvedor de Software</h2>
-A mediana salarial de Desenvolvedor de Software junior é de R$5.067,50, e para profissionais seniores,
-a mediana salarial é de R$12.069,00.<br>
-
-         <img src="blob">
+<p>A mediana salarial de Desenvolvedor de Software junior é de R$5.067,50, e para profissionais seniores,
+    a mediana salarial é de R$12.069,00.</p><br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+         <img class="primeiroblob" src="blob">
 
         <h2>• Desenvolvedor de Aplicativos para Smartphone</h2>
-Salário base médio: R$ 6.499,00 por mês<br>
-
-         <img src="blob2">
+        <p>Salário base médio: R$ 6.499,00 por mês</p><br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+         <img class="segundoblob" src="blob2">
     </section>
 
 
 
     <section id="section3">
         <h2>• Analista de Segurança Virtual</h2>
-A mediana salarial de Analista de Segurança da Informação junior é de R$3.527,00, e para profissionais
-seniores, a mediana salarial é de R$6.933,33.<br>
-
-    <img src="blob3">
+<p>A mediana salarial de Analista de Segurança da Informação junior é de R$3.527,00, e para profissionais
+    seniores, a mediana salarial é de R$6.933,33.</p><br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+    <img class="terceiroblob" src="blob3">
     </section>
 </div>
     <footer id="rodape">
