--- a/nathan.html
+++ b/nathan.html
@@ -30,25 +30,26 @@
     <section id="section2">
 
         <h2>Eu, o autor do site</h2>
-Não vou falar muito de mim porque não tenho tempo. Fabrício pediu pra terminar esse site ate 12:00. Meu nome é Nathan tenho 16 anos e gosto de Iron Maiden. Veja um trecho da musica somewhere in time: "If you had the time to lose,
-An open mind and time to choose,
-Would you care to take a look,
-Or can you read me like a book?
-Time is always on my side,
-Time is always on my side.
-Can I tempt you, come with me,
-Be Devil may care, fulfil your dream,
-If I said I'd take you there,
-Would you go, would you be scared? Time is always on my side,
-Time is always on my side.
-Don't be afraid, you're safe with me,
-Safe as any soul can be ... honestly,
-Just let yourself go Caught somewhere in time
-Caught somewhere in time
-Caught somewhere in time ... oh oh
-Caught somewhere in time
-Caught somewhere in time
-Caught somewhere in time ... oh oh"<br>
+        <p>Não vou falar muito de mim porque não tenho tempo. Fabrício pediu pra terminar esse site ate 12:00. Meu nome é Nathan tenho 16 anos e gosto de Iron Maiden. Veja um trecho da musica somewhere in time: </p><br>
+<p>"If you had the time to lose,<br>
+An open mind and time to choose,<br>
+Would you care to take a look,<br>
+Or can you read me like a book?<br>
+Time is always on my side,<br>
+Time is always on my side.<br>
+Can I tempt you, come with me,<br>
+Be Devil may care, fulfil your dream,<br>
+If I said I'd take you there,<br>
+Would you go, would you be scared? Time is always on my side,<br>
+Time is always on my side.<br>
+Don't be afraid, you're safe with me,<br>
+Safe as any soul can be ... honestly,<br>
+Just let yourself go Caught somewhere in time<br>
+Caught somewhere in time<br>
+Caught somewhere in time ... oh oh<br>
+Caught somewhere in time<br>
+Caught somewhere in time<br>
+    Caught somewhere in time ... oh oh"</p><br>
         <div id="eu">
          <img id="nathan" src="blob4">
         </div>
