--- a/analista.html
+++ b/analista.html
@@ -30,20 +30,29 @@
     <section id="section2">
 
         <h2>• Analista de Segurança Virtual</h2>
-À medida que as organizações dependem cada vez mais dos dados que coletam e armazenam, cresce
+<p>À medida que as organizações dependem cada vez mais dos dados que coletam e armazenam, cresce
 também a preocupação com a segurança de tais informações valiosas. A enorme quantidade de dados,
 as várias formas de comunicação e a vulnerabilidade das redes fazem com que tais ameaças
-representem um perigo real para a integridade dos negócios.
-Isso mostra o quanto o trabalho de especialistas em segurança da informação, sejam analistas ou
+    representem um perigo real para a integridade dos negócios.</p><br>
+<p>Isso mostra o quanto o trabalho de especialistas em segurança da informação, sejam analistas ou
 profissionais de engenharia, tem se tornado mais importante do que nunca para proteger as redes,
 bancos de dados e sistemas de computadores. O perfil mais procurado para vagas da profissão envolve
 pessoas com sólidos conhecimentos em segurança de redes e sistemas, capacidade de adaptação a
 mudanças, ótimas competências interpessoais e de liderança, assim como habilidades analíticas,
-comunicativas e de solução de problemas.
-A mediana salarial de Analista de Segurança da Informação junior é de R$3.527,00, e para profissionais
-seniores, a mediana salarial é de R$6.933,33.<br>
+    comunicativas e de solução de problemas.</p><br>
+<p>A mediana salarial de Analista de Segurança da Informação junior é de R$3.527,00, e para profissionais
+    seniores, a mediana salarial é de R$6.933,33.</p><br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
 
-         <img src="blob3">
+         <img class="analistaa" src="blob3">
     </section>
 </div>
 
